RESOLVED FIXED266012
Failing to deserialize data from _WKWebExtensionSQLiteRow
https://bugs.webkit.org/show_bug.cgi?id=266012
Summary Failing to deserialize data from _WKWebExtensionSQLiteRow
Kiara Rose
Reported 2023-12-07 13:17:23 PST
Failing to deserialize data from _WKWebExtensionSQLiteRow
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-07 13:17:38 PST
Kiara Rose
Comment 2 2023-12-07 13:25:01 PST
EWS
Comment 3 2023-12-07 13:50:38 PST
Committed 271693@main (9e36fb6ce4d5): <https://commits.webkit.org/271693@main> Reviewed commits have been landed. Closing PR #21458 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.