Failing to deserialize data from _WKWebExtensionSQLiteRow https://bugs.webkit.org/show_bug.cgi?id=266012

Reviewed by Brian Weinstein and Timothy Hatcher.

We should be passing data.bytes as is.
`- (NSData *)uncopiedDataAtIndex:(NSUInteger)index` needs a cast.

* Source/WebKit/Shared/Extensions/_WKWebExtensionSQLiteRow.mm:
(-[_WKWebExtensionSQLiteRow dataAtIndex:]):
(-[_WKWebExtensionSQLiteRow uncopiedDataAtIndex:]):
* Source/WebKit/Shared/Extensions/_WKWebExtensionSQLiteStore.mm:
Initialize with space for two items, not three.

Canonical link: https://commits.webkit.org/271693@main